--- a/package.json
+++ b/package.json
@@ -15,30 +15,31 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@types/jest": "^30.0.0",
+    "autoprefixer": "^10.4.0",
+    "firebase": "^10.7.0",
+    "framer-motion": "^10.18.0",
     "next": "^14.0.0",
+    "postcss": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "firebase": "^10.7.0",
-    "framer-motion": "^10.16.0",
     "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
     "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.0",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^5.0.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/user-event": "^14.0.0",
-    "jest": "^29.0.0",
-    "jest-environment-jsdom": "^29.0.0",
-    "msw": "^2.0.0",
-    "@playwright/test": "^1.40.0"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "msw": "^2.10.4",
+    "typescript": "^5.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
